// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui-bangle-button/ActionButton Primary 1`] = `
<button
  aria-label="hi brother"
  className="B-ui-bangle-button_button p-1  transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  <span
    className=""
  >
    hi brothers from another mother
  </span>
</button>
`;

exports[`Storyshots ui-bangle-button/DropdownMenu Primary 1`] = `
<button
  aria-pressed={false}
  className="B-ui-bangle-button_button p-1  transition-all duration-100"
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  <span
    className=""
  >
    wow
  </span>
</button>
`;

exports[`Storyshots ui-components/AlertModal Destructive 1`] = `
<div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  />
</div>
`;

exports[`Storyshots ui-components/AlertModal Scrollable Parent 1`] = `
<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div>
    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint, corporis libero? Consequuntur veniam perferendis soluta odit rem esse earum repellat officiis cum recusandae, quas facilis eos ad rerum quibusdam eligendi.
  </div>
  <div
    aria-hidden={null}
    data-overlay-container={true}
    style={
      Object {
        "zIndex": "var(--BV-window-modal-z-index)",
      }
    }
  />
</div>
`;

exports[`Storyshots ui-components/AlertModal Simple Submit 1`] = `
<div>
  <button
    aria-label="open"
    className="B-ui-bangle-button_button p-1  transition-all duration-100"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "color": "var(--BV-ui-bangle-button-color)",
      }
    }
    type="button"
  >
    <span
      className=""
    >
      Open modal
    </span>
  </button>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  />
</div>
`;

exports[`Storyshots ui-components/BaseButton Primary 1`] = `
<button
  className="transition-all duration-100 cursor-default  BU_is-hovered BU_is-pressed"
  style={
    Object {
      "transform": "scale(var(--BV-ui-bangle-button-depression))",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/BaseButton Secondary 1`] = `
<button
  className="transition-all duration-100 cursor-default "
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Basic Test 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary i-am-a-class transition-all duration-100 cursor-default "
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Destructive Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-destructive transition-all duration-100 cursor-default "
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-destructive-bg-color)",
      "color": "var(--BV-ui-bangle-button-destructive-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Disabled Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary i-am-a-class transition-all duration-100 cursor-default  cursor-not-allowed"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-disabled-bg-color)",
      "color": "var(--BV-ui-bangle-button-disabled-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Primary Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-primary transition-all duration-100 cursor-default "
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "var(--BV-ui-bangle-button-primary-bg-color)",
      "color": "var(--BV-ui-bangle-button-primary-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/Button Quiet Button 1`] = `
<button
  aria-label="Hi brother"
  className="B-ui-components_button p-1 px-2 select-none BU_variant-secondary transition-all duration-100 cursor-default "
  onBlur={[Function]}
  onClick={[Function]}
  onDragStart={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "color": "var(--BV-ui-bangle-button-color)",
    }
  }
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots ui-components/LocationBreadCrumb Primary 1`] = `
<div
  className="z-10 w-full py-1 pl-2"
>
  <span>
    hi
  </span>
  <span
    className="px-1"
  >
    &gt;
  </span>
  <span>
    brothers
  </span>
</div>
`;

exports[`Storyshots ui-components/Select Basic Example 1`] = `
<div
  className="inline-flex flex-col relative mt-4 w-56"
>
  <div
    className="B-ui-components_select-label text-sm font-medium cursor-default"
    id="react-aria-test-generated-id"
    onClick={[Function]}
  >
    Favorite Animal
  </div>
  <div
    aria-hidden={true}
    onBlur={null}
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": 1,
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    <input
      onFocus={[Function]}
      style={
        Object {
          "fontSize": 16,
        }
      }
      tabIndex={-1}
      type="text"
    />
    <label>
      Favorite Animal
      <select
        onChange={[Function]}
        size={6}
        tabIndex={-1}
        value=""
      >
        <option />
        <option
          value="red panda"
        >
          Red Panda
        </option>
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="aardvark"
        >
          Aardvark
        </option>
        <option
          value="kangaroo"
        >
          Really really really really big Kangaroo
        </option>
        <option
          value="snake"
        >
          Snake
        </option>
      </select>
    </label>
  </div>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="react-aria-test-generated-id react-aria-test-generated-id"
    className="B-ui-components_select-button p-1 relative inline-flex flex-row items-center justify-between overflow-hidden cursor-default shadow-sm outline-none"
    id="react-aria-test-generated-id"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "borderRadius": "var(--BV-ui-bangle-button-radius)",
      }
    }
    type="button"
  >
    <span
      className="text-md text-left px-1 w-64 truncate overflow-ellipsis "
      id="react-aria-test-generated-id"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
    >
      Select an option
    </span>
    <svg
      aria-hidden="true"
      className="w-5 h-5"
      fill="currentColor"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots ui-components/Select Controlled State 1`] = `
<div
  className="inline-flex flex-col relative mt-4 w-56"
>
  <div
    className="B-ui-components_select-label text-sm font-medium cursor-default"
    id="react-aria-test-generated-id"
    onClick={[Function]}
  >
    Favorite Animal
  </div>
  <div
    aria-hidden={true}
    onBlur={null}
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": 1,
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    <input
      onFocus={[Function]}
      style={
        Object {
          "fontSize": 16,
        }
      }
      tabIndex={-1}
      type="text"
    />
    <label>
      Favorite Animal
      <select
        onChange={[Function]}
        size={6}
        tabIndex={-1}
        value=""
      >
        <option />
        <option
          value="red panda"
        >
          Red Panda
        </option>
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="aardvark"
        >
          Aardvark
        </option>
        <option
          value="kangaroo"
        >
          Really really really really big Kangaroo
        </option>
        <option
          value="snake"
        >
          Snake
        </option>
      </select>
    </label>
  </div>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="react-aria-test-generated-id react-aria-test-generated-id"
    className="B-ui-components_select-button p-1 relative inline-flex flex-row items-center justify-between overflow-hidden cursor-default shadow-sm outline-none"
    id="react-aria-test-generated-id"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "borderRadius": "var(--BV-ui-bangle-button-radius)",
      }
    }
    type="button"
  >
    <span
      className="text-md text-left px-1 w-64 truncate overflow-ellipsis "
      id="react-aria-test-generated-id"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
    >
      Select an option
    </span>
    <svg
      aria-hidden="true"
      className="w-5 h-5"
      fill="currentColor"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots ui-components/Select Disabled Keys 1`] = `
<div
  className="inline-flex flex-col relative mt-4 w-56"
>
  <div
    className="B-ui-components_select-label text-sm font-medium cursor-default"
    id="react-aria-test-generated-id"
    onClick={[Function]}
  >
    Favorite Animal
  </div>
  <div
    aria-hidden={true}
    onBlur={null}
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": 1,
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    <input
      onFocus={[Function]}
      style={
        Object {
          "fontSize": 16,
        }
      }
      tabIndex={-1}
      type="text"
    />
    <label>
      Favorite Animal
      <select
        onChange={[Function]}
        size={6}
        tabIndex={-1}
        value=""
      >
        <option />
        <option
          value="red panda"
        >
          Red Panda
        </option>
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="aardvark"
        >
          Aardvark
        </option>
        <option
          value="kangaroo"
        >
          Really really really really big Kangaroo
        </option>
        <option
          value="snake"
        >
          Snake
        </option>
      </select>
    </label>
  </div>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="react-aria-test-generated-id react-aria-test-generated-id"
    className="B-ui-components_select-button p-1 relative inline-flex flex-row items-center justify-between overflow-hidden cursor-default shadow-sm outline-none"
    id="react-aria-test-generated-id"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "borderRadius": "var(--BV-ui-bangle-button-radius)",
      }
    }
    type="button"
  >
    <span
      className="text-md text-left px-1 w-64 truncate overflow-ellipsis "
      id="react-aria-test-generated-id"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
    >
      Select an option
    </span>
    <svg
      aria-hidden="true"
      className="w-5 h-5"
      fill="currentColor"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots ui-components/Select Section Example 1`] = `
<div
  className="inline-flex flex-col relative mt-4 w-56"
>
  <div
    className="B-ui-components_select-label text-sm font-medium cursor-default"
    id="react-aria-test-generated-id"
    onClick={[Function]}
  >
    Companies
  </div>
  <div
    aria-hidden={true}
    onBlur={null}
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": 1,
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    <input
      onFocus={[Function]}
      style={
        Object {
          "fontSize": 16,
        }
      }
      tabIndex={-1}
      type="text"
    />
    <label>
      Companies
      <select
        onChange={[Function]}
        size={12}
        tabIndex={-1}
        value=""
      >
        <option />
        <option
          value="Chatterbridge"
        >
          Chatterbridge
        </option>
        <option
          value="tagchat"
        >
          Tagchat
        </option>
        <option
          value="$.0.2"
        >
          Yambee
        </option>
        <option
          value="$.0.3"
        >
          Photobug
        </option>
        <option
          value="$.0.4"
        >
          Livepath
        </option>
        <option
          value="$.1.0"
        >
          Theodor Dawber
        </option>
        <option
          value="$.1.1"
        >
          Dwight Stollenberg
        </option>
        <option
          value="$.1.2"
        >
          Maddalena Prettjohn
        </option>
        <option
          value="$.1.3"
        >
          Maureen Fassan
        </option>
        <option
          value="$.1.4"
        >
          Abbie Binyon
        </option>
      </select>
    </label>
  </div>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="react-aria-test-generated-id react-aria-test-generated-id"
    className="B-ui-components_select-button p-1 relative inline-flex flex-row items-center justify-between overflow-hidden cursor-default shadow-sm outline-none"
    id="react-aria-test-generated-id"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "backgroundColor": "var(--BV-ui-bangle-button-bg-color)",
        "borderRadius": "var(--BV-ui-bangle-button-radius)",
      }
    }
    type="button"
  >
    <span
      className="text-md text-left px-1 w-64 truncate overflow-ellipsis "
      id="react-aria-test-generated-id"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
    >
      Select an option
    </span>
    <svg
      aria-hidden="true"
      className="w-5 h-5"
      fill="currentColor"
      style={
        Object {
          "color": "var(--BV-ui-bangle-button-color)",
        }
      }
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;
